--- a/game-of-life/src/App.css
+++ b/game-of-life/src/App.css
@@ -1,4 +1,4 @@
-#world {
+/* #world {
   padding-bottom: 10px;
 }
 table {
@@ -9,3 +9,9 @@ td {
   width: 10px;
   height: 10px;
 }
+ */
+
+ background-image{ 
+   linear-gradient:#333 1px, transparent 1px;           
+   linear-gradient: 90deg, #333 1px, transparent 1px;
+ }
